fixed signup heights to dont show scrollbar

--- a/css/signup.css
+++ b/css/signup.css
@@ -1,6 +1,5 @@
 .body-signup {
     background-color: #f6f7f8;
-    min-height: 100vh;
     max-width: 1920px;
 }
 
@@ -8,14 +7,14 @@ html,
 body {
     font-family: open-sans, sans-serif;
     background-color: #f6f7f8;
-    min-height: 100vh;
+    box-sizing: border-box;
 }
 
 .main-container-join {
+    flex: 1;
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
     max-width: 1920px;
     max-height: 1080px;
 
@@ -40,7 +39,6 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
     width: 80%;
 }
 
@@ -76,12 +74,10 @@ body {
     justify-content: center;
     align-items: center;
     width: 598px;
-    height: 630px;
     top: 197px;
     left: 421px;
     border-radius: 30px;
     background-color: #FFFFFF;
-    margin-top: 100px;
 }
 
 .hr-line-signup {
